@@ -29,6 +29,7 @@ Bug fixes
  * Wagtail bird animation in admin now ends correctly on all browsers (Deniz Dogan)
  * Explorer menu no longer shows sibling pages for which the user does not have access (Mike Hearn)
  * Fixed occurences of invalid HTML across the CMS admin (Thibaud Colas)
+ * Admin HTML now includes the correct ``dir`` attribute for the active language (Andreas Bernacca)
 
 
 Upgrade considerations
